Fix statistic bar spacing

--- a/styles/_statistic-bar.css
+++ b/styles/_statistic-bar.css
@@ -1,7 +1,7 @@
 .statistic-bar__list {
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 10px;
 }
 
 .statistic-bar__item {
